--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "vue": "^3.0.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0",
