added upload for files

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DB_URL=mongodb+srv://user:user@modive.ipyar.mongodb.net/modive?retryWrites=true&w=majority
+DB_URL2=mongodb://localhost:27017/modive
