--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
     "vue": "^3.0.7",
+    "vue-easy-lightbox": "^1.2.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0",
     "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0-0"
   },
   "eslintConfig": {
