--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
+    "html2pdf.js": "^0.10.1",
     "moment": "^2.29.1",
     "vue": "^3.0.7",
     "vue-easy-lightbox": "^1.2.4",
@@ -21,7 +22,6 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
